Fix mobile drawer submenu visibility

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -374,10 +374,6 @@ body[data-drawer-open='true'] {
   padding-block: calc(var(--space) * 2);
 }
 
-.drawer__menu > ul.is-hidden {
-  display: none;
-}
-
 .drawer__footer {
   padding-top: calc(var(--space) * 4);
   margin-top: auto;
